create local dns container with pihole

--- a/hosts/homeserver/props.toml
+++ b/hosts/homeserver/props.toml
@@ -1,5 +1,13 @@
-[network]
+timezone = "America/Chicago"
+
+[networks.proxy]
   name = "private"
+
+[networks.vlan]
+  name = "vlan"
+  subnet = "192.168.0.0/24"
+  gateway = "192.168.0.1"
+  parent = "eno1"
 
 [backup]
   apps.directory = "/home/tyler/backup/apps"
