schedule backups for docker volumes

--- a/stacks/feed/docker-compose.yaml
+++ b/stacks/feed/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=miniflux
     volumes:
-      - /home/tyler/apps/miniflux/data:/var/lib/postgresql/data
+      - ${DATA_DIR}:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "miniflux"]
       interval: 10s
