--- a/stacks/dns/docker-compose.yaml
+++ b/stacks/dns/docker-compose.yaml
@@ -5,8 +5,8 @@ services:
     dns:
       - 9.9.9.9
     volumes:
-      - /home/tyler/apps/pihole/etc-pihole:/etc/pihole
-      - /home/tyler/apps/pihole/etc-dnsmasq:/etc/dnsmasq.d
+      - ${DATA_DIR}:/etc/pihole
+      - ${DNSMASQ_DIR}:/etc/dnsmasq.d
     environment:
       TZ: ${TIMEZONE}
       WEBPASSWORD: ${PASSWORD}
