--- a/stacks/proxy/docker-compose.yaml
+++ b/stacks/proxy/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   proxy:
-    image: "docker.io/jc21/nginx-proxy-manager:latest"
+    image: "docker.io/jc21/nginx-proxy-manager:${NPM_VERSION:-latest}"
     ports:
       - 80:80
       - 443:443
