create dashboard trait with glance and docker

--- a/nixos/traits/feed/docker-compose.yaml
+++ b/nixos/traits/feed/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
       - FETCH_YOUTUBE_WATCH_TIME=1
       - RUN_MIGRATIONS=1
       - BASE_URL=${BASE_URL}
+      - COOKIE_SAMESITE=None
     healthcheck:
       test: ["CMD", "/usr/bin/miniflux", "-healthcheck", "auto"]
     networks:
