--- a/nixos/traits/search/docker-compose.yaml
+++ b/nixos/traits/search/docker-compose.yaml
@@ -9,14 +9,14 @@ services:
     volumes:
       - ${VALKEY_DATA_DIR}:/data
 
-  searxng:
+  search:
     container_name: searxng
     image: docker.io/searxng/searxng:latest
     restart: unless-stopped
     networks:
       - searxng
-    ports:
-      - "8080:8080"
+    expose:
+      - 8080
     volumes:
       - ${CONFIG_DIR}:/etc/searxng:rw
       - ${DATA_DIR}:/var/cache/searxng:rw
@@ -24,4 +24,6 @@ services:
       - SEARXNG_BASE_URL=https://${SEARCH_HOSTNAME:-localhost}/
 
 networks:
+  cluster:
+    external: true
   searxng:
