--- a/nixos/traits/dash/docker-compose.yaml
+++ b/nixos/traits/dash/docker-compose.yaml
@@ -1,8 +1,8 @@
 services:
   dash:
     image: glanceapp/glance
-    ports:
-      - 8081:8080
+    expose:
+      - 8080
     environment:
       - MINIFLUX_TOKEN=${MINIFLUX_TOKEN}
       - MINIFLUX_API_URL=${MINIFLUX_URL}
@@ -10,3 +10,7 @@ services:
     volumes:
       - /home/tyler/apps/glance:/app/config
     restart: unless-stopped
+
+networks:
+  cluster:
+    external: true
