--- a/nixos/traits/search/docker-compose.yaml
+++ b/nixos/traits/search/docker-compose.yaml
@@ -15,8 +15,8 @@ services:
     restart: unless-stopped
     networks:
       - searxng
-    expose:
-      - 8080
+    ports:
+      - 8081:8080
     volumes:
       - ${CONFIG_DIR}:/etc/searxng:rw
       - ${DATA_DIR}:/var/cache/searxng:rw
