--- a/nixos/traits/containers/docker-compose.yaml
+++ b/nixos/traits/containers/docker-compose.yaml
@@ -1,13 +1,17 @@
 services:
-  containers:
+  app:
     image: "portainer/portainer-ce:${PORTAINER_VERSION:-lts}"
     volumes:
       - /home/tyler/apps/portainer/data:/data
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
-      - private
+      - cluster
+    deploy:
+      placement:
+        constraints:
+          - node.hostname == coconut
 
 networks:
-  private:
+  cluster:
     external: true
 
