--- a/nixos/traits/dash/docker-compose.yaml
+++ b/nixos/traits/dash/docker-compose.yaml
@@ -1,15 +1,18 @@
 services:
-  dash:
+  app:
     image: glanceapp/glance
-    ports:
-      - 8080:8080
+    expose:
+      - 8080
     environment:
       - MINIFLUX_TOKEN=${MINIFLUX_TOKEN}
       - MINIFLUX_API_URL=${MINIFLUX_URL}
       - MINIFLUX_LINKS_URL=${MINIFLUX_URL}
     volumes:
       - /home/tyler/apps/glance:/app/config
-    restart: unless-stopped
+    deploy:
+      placement:
+        constraints:
+          - node.hostname == bubblegum
 
 networks:
   cluster:
